<resources>
    <string name="app_name">Calculator</string>
    <string name="hello_world">Hello Kurwa</string>
    <string name="example">10 + 5 = ?</string>
    <string name="answer_button">Answer</string>
    <string name="answer_is_incorrect">Sorry, the answer is incorrect</string>
    <string name="hint_input_answer">Input answer</string>
    <string name="answer_is_correct">You are right</string>
</resources>